docs(scm): update GitHub URL and clean up dependencies
- Fix typo in GitHub URL in pom.xml
- Remove unnecessary newline in dependencies/pom.xml